Add generic behaviour generator

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
+{erl_first_files, ["src/lua_behaviour.erl"]}.
 {deps,
     [
         {erlualib, "", {git, "git://github.com/Motiejus/erlualib.git", "HEAD"}}
