--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_first_files, ["src/lua_behaviour.erl"]}.
 {deps,
     [
-        {erlualib, "", {git, "git://github.com/Motiejus/erlualib.git", "HEAD"}}
+        {erlualib, "", {git, "git://github.com/Motiejus/erlualib.git", "0.1"}}
     ]
 }.
